# chainrisk

./: .env.example  .gitignore  CAPE_Architecture_v1.md  Dockerfile  README.md  detailed.txt  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  cape.py  graph.py  report.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  report_agent_prompts.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  logger.py  retry.py  zep_paging.py
backend/cape/: bootstrap.py  contracts.py  db.py  sku_integrity.py
backend/cape/agents/: base.py  distributor.py  manufacturer.py  retailer.py  supplier.py
backend/cape/ai/: __init__.py  agent.py  causality_engine.py  counterfactual.py  output_validation.py  prompt_builder.py  tools.py
backend/cape/capacity/: allocator.py
backend/cape/events/: bus.py  (+1 more)
backend/migrations/: 001_cape_schema.sql  002_cape_projects.sql  003_cape_project_memory.sql  004_cape_projects_columns.sql  005_tick_metrics_edge_metrics.sql
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: conftest.py
(+77 files in other folders)
